- Added more styling / markup for convenience -- highlighting for valid / invalid input fields now -- prettier formatting - bugfixing in JS code -- undefined values would cause errors, so I restructured the boolean expressions to check for undefined first where applicable

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,31 @@
 @charset "UTF-8";
 
-.testRun {
-  margin : 25px;
-  text-align : center;
+.angularPage {
+
+}
+
+.input,
+.result {
+  min-height : 200px;
+  padding : 25px;
+}
+
+.input {
+  border : 1px solid Black;
+}
+
+.input_block {
+  padding : 10px;
+}
+
+.result {
+  border : 1px solid Black;
+}
+
+.ng-valid {
+  background-color : Lime;
+}
+
+.ng-invalid {
+  background-color : red;
 }
